test/integration/bad/complex-numbers/bad_bounds1.stan
data {
  int N;
}
parameters {
  complex_matrix<lower=0>[N,N] Z;
}
